[tool.poetry]
name = "meinheld-gunicorn-docker"
version = "0.1.0"
description = "Docker image with Meinheld managed by Gunicorn for high-performance web applications in Python with performance auto-tuning. Optionally with Alpine Linux."
authors = ["Sebastián Ramírez <tiangolo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
docker = "^5.0.1"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = ">=3.8.3"
mypy = "^0.770"

[tool.isort]
profile = "black"
indent = "    "
force_sort_within_sections = "true"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
known_first_party = "tests"
forced_separate = "tests"
combine_as_imports = "true"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
